deploy/kustomize/components/observability/pyrra/pyrra-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pyrra
  namespace: observability
spec:
  hostnames:
  - pyrra.YOUR_DOMAIN
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - name: pyrra-api
      port: 9099
    matches:
    - path:
        type: PathPrefix
        value: /
